--- a/DoAn_DatDoAn/app/src/main/res/layout/fragment_khach_hang__xac_nhan_dat_hang.xml
+++ b/DoAn_DatDoAn/app/src/main/res/layout/fragment_khach_hang__xac_nhan_dat_hang.xml
@@ -115,6 +115,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:visibility="gone"
                     android:layout_alignLeft="@+id/tvdiachinguoidat_khachhang_xacnhandathangfragment"
                     android:layout_below="@+id/tvkhoangcach_khachhang_xacnhandathang"
                     android:id="@+id/tvphivanchuyen_khachhang_xacnhandathang"
@@ -238,6 +239,7 @@
                 android:layout_height="wrap_content" />
 
             <TextView
+                android:visibility="gone"
                 android:text="Abc"
                 android:padding="5dp"
                 android:id="@+id/tvtongtien_khachhang_xacnhandathang"
