--- a/DoAn_DatDoAn/app/src/main/res/layout/fragment_sign_in.xml
+++ b/DoAn_DatDoAn/app/src/main/res/layout/fragment_sign_in.xml
@@ -95,7 +95,7 @@
 
                     <EditText
                         android:id="@+id/et_username"
-                        android:text="abc"
+                        android:text="q1"
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:layout_marginLeft="16dp"
@@ -111,7 +111,7 @@
                         android:textStyle="normal"/>
 
                     <EditText
-                        android:text="abc"
+                        android:text="q1"
                         android:id="@+id/et_password"
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
