--- a/DoAn_DatDoAn/app/src/main/res/layout/item_overview_rv.xml
+++ b/DoAn_DatDoAn/app/src/main/res/layout/item_overview_rv.xml
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content" />
 
     <TextView
+        android:textSize="8sp"
         android:id="@+id/tvtien_piechart"
         android:layout_marginEnd="30dp"
         android:layout_alignTop="@+id/tvloaihang_piechart"
